# iapetus11.me

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  app.vue  bruh.js  build.bat  build.sh  docker-compose.yml  env.example  error.vue  eslint.config.ts  iapetus11.nimble  iapetus11me.nimble  index.html  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  run.sh  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/workflows/: checks.yml  ci.yml
_data/: me.ts  nav.ts
_util/: colors.ts  tailwind.config.cjs
assets/: app.css  main.css
components/: AboutMeSection.vue  AnimateableText.vue  AnimatedCircleOutline.vue  Header.vue  Markdown.vue  Project.vue  Referral.vue  Skill.vue  SkillsSection.vue
components/navigation/: Combined.vue  ExternalPages.vue  Pages.vue  SmallItems.vue
data/: projects.ts  skills.ts
layouts/: default.vue  home.vue
old/: .eslintrc.cjs
old/utils/: objects.ts
pages/: index.js  index.vue
pages/fractals/: fractals.ts  index.vue
pages/index/: Skill.vue  index.vue  skills.ts
plugins/: fontawesome.ts  patchRoutes.ts
public/: manifest.json  robots.txt  sitemap.xml
src/: App.vue  app  app.css  app.d.ts  app.html  app.nim  app.py  errors.py  main.ts  router.ts  routes.nim  routes.ts  styles.css
static/: sitemap.xml
styles/: globals.css
utils/: animationHelpers.ts  datetime.ts  events.ts  objects.ts  observers.ts  queryParamsParser.ts
(+164 files in other folders)
