[tool.poetry]
name = "iapetus11.me"
version = "1.0.0"
description = "A personal + porfolio website for and by Milo Weinberg"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
gunicorn = "^20.1.0"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
